--- a/package.json
+++ b/package.json
@@ -51,71 +51,39 @@
       "git add"
     ]
   },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "mapCoverage": true,
-    "coveragePathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/lib/",
-      "<rootDir>/lib-esm/",
-      "<rootDir>/umd/",
-      "<rootDir>/src/.*(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
-    ],
-    "globals": {
-      "ts-jest": {
-        "skipBabel": true
-      }
-    },
-    "coverageThreshold": {
-      "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 85
-      }
-    }
-  },
+  "dependencies": {},
   "peerDependencies": {
-    "moment": "^2.24.0"
+    "moment": "2.24.0"
   },
   "devDependencies": {
-    "@types/jest": "20.0.2",
-    "@types/node": "7.0.31",
-    "awesome-typescript-loader": "3.2.1",
-    "commitizen": "2.9.6",
-    "cross-var": "1.0.3",
-    "cz-conventional-changelog": "2.0.0",
-    "gzip-size-cli": "2.0.0",
+    "@types/jest": "24.0.11",
+    "@types/node": "11.13.4",
+    "awesome-typescript-loader": "5.2.1",
+    "commitizen": "3.0.7",
+    "cross-var": "1.1.0",
+    "cz-conventional-changelog": "2.1.0",
+    "gzip-size-cli": "3.0.0",
     "irish-pub": "0.2.0",
-    "jest": "20.0.4",
-    "jest-cli": "22.4.3",
-    "lint-staged": "4.0.0",
-    "prettier": "1.5.2",
-    "shx": "0.2.2",
-    "standard-version": "4.2.0",
+    "jest": "24.7.1",
+    "jest-cli": "24.7.1",
+    "lint-staged": "8.1.5",
+    "moment": "2.24.0",
+    "prettier": "1.17.0",
+    "shx": "0.3.2",
+    "standard-version": "5.0.2",
     "strip-json-comments-cli": "1.0.1",
-    "ts-jest": "20.0.6",
-    "tslint": "5.4.3",
-    "tslint-config-prettier": "1.1.0",
-    "tslint-config-standard": "6.0.1",
-    "tslint-react": "3.0.0",
-    "typedoc": "0.7.1",
-    "typescript": "2.4.1",
-    "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
-    "uglifyjs-webpack-plugin": "0.4.5",
-    "validate-commit-msg": "2.12.2",
-    "webpack": "3.0.0",
-    "webpack-config-utils": "2.3.0"
+    "ts-jest": "24.0.2",
+    "tslint": "5.16.0",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-config-standard": "8.0.1",
+    "tslint-react": "4.0.0",
+    "typedoc": "0.14.2",
+    "typescript": "3.4.3",
+    "uglify-js": "3.5.4",
+    "uglifyjs-webpack-plugin": "2.1.2",
+    "validate-commit-msg": "2.14.0",
+    "webpack": "4.30.0",
+    "webpack-cli": "3.3.0",
+    "webpack-config-utils": "2.3.1"
   }
 }
